made it possible to get and attach and detach artists to concerts
