# routes/api.php
@@ -15,3 +15,8 @@ Route::apiResource('events', EventController::class)->only(['index', 'store', 's
 Route::apiResource('locations', LocationController::class)->only(['index', 'store', 'show', 'update', 'destroy']);
 Route::apiResource('artists', ArtistController::class)->only(['index', 'store', 'show', 'update', 'destroy']);
 Route::apiResource('concerts', ConcertController::class)->only(['index', 'store', 'show', 'update', 'destroy']);
+
+// Concert artist management routes
+Route::get('/concerts/{concert}/artists', [ConcertController::class, 'getArtists']);
+Route::post('/concerts/{concert}/artists', [ConcertController::class, 'attachArtist']);
+Route::delete('/concerts/{concert}/artists/{artistId}', [ConcertController::class, 'detachArtist']);
